# CnC_Renegade

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
Code/: cmake_source_and_header_helper.rb  winshit_repair.rb
Code/BandTest/: BandTest.cpp  BandTest.h
Code/BinkMovie/: BINKMovie.cpp  BINKMovie.h  CMakeLists.txt  subtitle.cpp  subtitle.h  subtitlemanager.cpp  subtitlemanager.h  subtitleparser.cpp  subtitleparser.h
Code/Combat/: CMakeLists.txt  CNCModeSettings.cpp  CNCModeSettings.h  SoundEnvironment.cpp  SoundEnvironment.h  WeatherMgr.cpp  WeatherMgr.h  action.cpp  action.h  actionparams.h  activeconversation.cpp  activeconversation.h  airstripgameobj.cpp  airstripgameobj.h  animcontrol.cpp  animcontrol.h  apppackettypes.h  armedgameobj.cpp  armedgameobj.h  assetdep.cpp  assetdep.h  assets.cpp  assets.h  backgroundmgr.cpp  backgroundmgr.h  basecontroller.cpp  basecontroller.h  basegameobj.cpp  basegameobj.h  beacongameobj.cpp  beacongameobj.h  bones.cpp  bones.h  building.cpp  building.h  buildingaggregate.cpp  buildingaggregate.h  buildingmonitor.cpp  buildingmonitor.h  buildingstate.h  (+210 more)
Code/Commando/: AnnounceEvent.cpp  AnnounceEvent.h  AutoStart.cpp  AutoStart.h  CDKeyAuth.cpp  CDKeyAuth.h  CMakeLists.txt  ConsoleMode.cpp  ConsoleMode.h  DlgDownload.cpp  DlgDownload.h  DlgMPConnect.cpp  DlgMPConnect.h  DlgMPConnectionRefused.cpp  DlgMPConnectionRefused.h  DlgMPTeamSelect.cpp  DlgMPTeamSelect.h  DlgMessageBox.cpp  DlgMessageBox.h  DlgPasswordPrompt.cpp  DlgQuickmatch.cpp  DlgQuickmatch.h  DlgRestart.cpp  DlgRestart.h  DlgWOLAutoStart.cpp  DlgWOLAutoStart.h  DlgWOLLogon.cpp  DlgWOLLogon.h  DlgWOLSettings.cpp  DlgWOLSettings.h  DlgWOLWait.cpp  DlgWOLWait.h  DlgWebPage.cpp  DlgWebPage.h  FirewallWait.cpp  FirewallWait.h  GameResSend.cpp  GameResSend.h  GameSpyBanList.cpp  GameSpyBanList.h  (+363 more)
Code/Installer/: CardSelectionDialog.cpp  CodeControl.h  CopyDialog.cpp  CopyThread.cpp  CopyThread.h  DirectoryBrowser.cpp  DirectoryBrowser.h  DirectoryDialog.cpp  DirectoryDialog.h  ErrorHandler.cpp  ErrorHandler.h  FinalDialog.cpp  InstallMenuDialog.cpp  InstallMenuDialog.h  Installer.cpp  Installer.h  LicenseDialog.cpp  MessageBox.cpp  MessageBox.h  RAMFileFactory.cpp  RAMFileFactory.h  RegistryManager.cpp  RegistryManager.h  ReviewDialog.h  (+14 more)
Code/Scripts/: CMakeLists.txt  Common.cpp  Common.h  CustomEvents.h  DLLmain.cpp  DPrint.cpp  DPrint.h  DrMobius.cpp  Group.cpp  GroupControl.cpp  GroupScript.cpp  Mission00.cpp  Mission00.h  Mission01.cpp  Mission02.cpp  Mission03.cpp  Mission04.cpp  Mission05.cpp  Mission06.cpp  Mission07.cpp  Mission09.cpp  Mission10.cpp  Mission10.h  Mission11.cpp  Mission11.h  Mission12.h  Mission2.h  Mission5.h  Mission6.h  Mission8.h  MissionDemo.cpp  MissionX0.cpp  MissionX0.h  ScriptFactory.cpp  ScriptNode.h  ScriptPublisher.h  ScriptRegistrant.h  ScriptRegistrar.cpp  ScriptRegistrar.h  Test_BMG.cpp  (+35 more)
Code/wwaudio/: CMakeLists.txt  audiblesound.h  audiosaveload.cpp  listener.cpp  listenerhandle.cpp  logicallistener.cpp  logicalsound.cpp  logicalsound.h  priorityvector.h  sound2dhandle.h  sound3d.cpp  sound3d.h  soundbuffer.h  soundchunkids.h  soundpseudo3d.cpp  soundscene.cpp  soundsceneobj.cpp  soundsceneobj.h  soundstreamhandle.cpp  soundstreamhandle.h  staticsoundcullobj.h  threads.cpp  utils.h
Code/wwbitpack/: BitPacker.cpp  BitPacker.h  CMakeLists.txt  bitpackids.h  bitstream.cpp  bitstream.h  encoderlist.cpp  encoderlist.h  encodertypeentry.cpp  encodertypeentry.h
Code/wwlib/: CMakeLists.txt  CallbackHook.h  Except.cpp  Except.h  FastAllocator.h  LaunchWeb.cpp  LaunchWeb.h  Notify.h  Signaler.h  TARGA.CPP  TARGA.H  WWCOMUtil.cpp  WWCOMUtil.h  _convert.cpp  _convert.h  _mono.cpp  _mono.h  _timer.cpp  _timer.h  _xmouse.h  always.h  argv.cpp  argv.h  b64pipe.cpp  b64pipe.h  b64straw.cpp  b64straw.h  base64.cpp  base64.h  binheap.h  bittype.h  blit.cpp  blit.h  blitblit.h  blitter.h  blowfish.cpp  blowfish.h  blowpipe.cpp  blowpipe.h  blwstraw.cpp  (+225 more)
Code/wwnet/: BWBalance.cpp  BWBalance.h  CMakeLists.txt  connect.cpp  connect.h  fromaddress.h  lan.cpp  msgstat.cpp  msgstat.h  msgstatlist.cpp  msgstatlist.h  msgstatlistgroup.cpp  msgstatlistgroup.h  netstats.cpp  netstats.h  netutil.cpp  netutil.h  networkobject.cpp  networkobject.h  networkobjectfactory.cpp  networkobjectfactory.h  networkobjectfactorymgr.cpp  networkobjectfactorymgr.h  networkobjectmgr.cpp  networkobjectmgr.h  packetmgr.cpp  packetmgr.h  packettype.h  rhost.cpp  rhost.h  singlepl.cpp  singlepl.h  wwpacket.cpp  wwpacket.h
Code/wwsaveload/: CMakeLists.txt  definition.cpp  definition.h  definitionclassids.h  definitionfactory.cpp  definitionfactory.h  definitionfactorymgr.cpp  definitionfactorymgr.h  definitionmgr.cpp  definitionmgr.h  editable.h  parameter.cpp  parameter.h  parameterlist.h  persist.h  persistfactory.cpp  persistfactory.h  pointerremap.cpp  pointerremap.h  postloadable.h  saveload.cpp  saveload.h  saveloadids.h  saveloadstatus.cpp  saveloadstatus.h  saveloadsubsystem.cpp  saveloadsubsystem.h  simpledefinitionfactory.h  simpleparameter.h  twiddler.cpp  twiddler.h  wwsaveload.cpp  wwsaveload.h
Code/wwtranslatedb/: CMakeLists.txt  stringtwiddler.cpp  stringtwiddler.h  tdbcategories.h  tdbcategory.cpp  tdbcategory.h  translatedb.cpp  translatedb.h  translatedbids.h  translateobj.cpp  translateobj.h
Code/wwui/: CMakeLists.txt  IMECandidate.cpp  IMECandidateCtrl.cpp  IMECandidateCtrl.h  IMEManager.cpp  buttonctrl.cpp  buttonctrl.h  checkboxctrl.cpp  checkboxctrl.h  childdialog.cpp  childdialog.h  comboboxctrl.cpp  comboboxctrl.h  controladvisesink.h  dialogbase.cpp  dialogbase.h  dialogbutton.cpp  dialogbutton.h  dialogcontrol.cpp  dialogcontrol.h  dialogfactory.h  dialogmgr.cpp  dialogmgr.h  dialogparser.cpp  dialogparser.h  dialogtext.cpp  dialogtext.h  dialogtransition.cpp  dialogtransition.h  dropdownctrl.cpp  dropdownctrl.h  editctrl.cpp  editctrl.h  healthbarctrl.cpp  healthbarctrl.h  imagectrl.cpp  imagectrl.h  imecandidate.cpp  imecandidate.h  imecandidatectrl.cpp  (+50 more)
include/: commando_engine.h  window.h
src/: commando_engine.cpp  window.cpp
(+2713 files in other folders)
