set (commando_headers
        AnnounceEvent.h
        AutoStart.h
        CDKeyAuth.h
        ConsoleMode.h
        DlgDownload.h
        DlgMPConnect.h
        DlgMPConnectionRefused.h
        DlgMPTeamSelect.h
        DlgMessageBox.h
        DlgPasswordPrompt.h
        DlgQuickmatch.h
        DlgRestart.h
        DlgWOLAutoStart.h
        DlgWOLLogon.h
        DlgWOLSettings.h
        DlgWOLWait.h
        DlgWebPage.h
        FirewallWait.h
        GameResSend.h
        GameSpyBanList.h
        GameSpy_QnR.h
        ServerSettings.h
        WOLBuddyMgr.h
        WOLChatMgr.h
        WOLDiags.h
        WOLGameInfo.h
        WOLJoinGame.h
        WOLLoginProfile.h
        WOLLogonMgr.h
        WOLQuickMatch.h
        WebBrowser.h
        _globals.h
        apppacketstats.h
        bandwidth.h
        bandwidthcheck.h
        bandwidthgraph.h
        bioevent.h
        boolean.h
        buildnum.h
        campaign.h
        cdverify.h
        changeteamevent.h
        chatshre.h
        clientbboevent.h
        clientfps.h
        clientgoodbyeevent.h
        clienthintmanager.h
        clientpingmanager.h
        cnetwork.h
        combatgmode.h
        cominit.h
        commandochunkids.h
        commandoids.h
        commandosaveload.h
        comnetrcv.h
        comnetrcvinst.h
        console.h
        consolecommandevent.h
        consolefunction.h
        csconsolecommandevent.h
        cshint.h
        cspingrequestevent.h
        cstextobj.h
        datasafe.h
        demosupport.h
        devoptions.h
        diagnostics.h
        dialogresource.h
        dialogtests.h
        dlgcharacteroptions.h
        dlgcheatoptions.h
        dlgcncbattleinfo.h
        dlgcncpurchasemainmenu.h
        dlgcncpurchasemenu.h
        dlgcncreference.h
        dlgcncserverinfo.h
        dlgcncteaminfo.h
        dlgcncwinscreen.h
        dlgconfigaudiotab.h
        dlgconfigperformancetab.h
        dlgconfigvideotab.h
        dlgcontrols.h
        dlgcontrolsaveload.h
        dlgcontrolslisttab.h
        dlgcontroltabs.h
        dlgcredits.h
        dlgevabuildingstab.h
        dlgevacharacterstab.h
        dlgevadatatab.h
        dlgevaencyclopedia.h
        dlgevamaptab.h
        dlgevaobjectivestab.h
        dlgevavehiclestab.h
        dlgevaviewertab.h
        dlgevaweaponstab.h
        dlghelpscreen.h
        dlginternetoptions.h
        dlgloadspgame.h
        dlgmainmenu.h
        dlgmovieoptions.h
        dlgmpchangelannickname.h
        dlgmpingamechat.h
        dlgmpingameteamchat.h
        dlgmplangamelist.h
        dlgmplanhostoptions.h
        dlgmpslaveservers.h
        dlgmpwoladdbuddy.h
        dlgmpwoladdignoreentry.h
        dlgmpwolautologinprompt.h
        dlgmpwolbuddies.h
        dlgmpwolbuddylistpopup.h
        dlgmpwolchat.h
        dlgmpwoldeletebuddy.h
        dlgmpwoldeleteignoreentry.h
        dlgmpwolgamelist.h
        dlgmpwolgoodies.h
        dlgmpwolhostchatlobby.h
        dlgmpwolignorelist.h
        dlgmpwolinvitation.h
        dlgmpwollocalenag.h
        dlgmpwolmain.h
        dlgmpwolmotd.h
        dlgmpwolpagebuddy.h
        dlgmpwolpagereply.h
        dlgmpwolquickmatch.h
        dlgmpwolquickmatchoptions.h
        dlgmultiplayoptions.h
        dlgpreviewoptions.h
        dlgsavegame.h
        dlgserversaveload.h
        dlgsidebarhelp.h
        dlgtechoptions.h
        donateevent.h
        evictionevent.h
        floodprotectionmgr.h
        gamechanlist.h
        gamechannel.h
        gamedata.h
        gamedataupdateevent.h
        gameinitmgr.h
        gamemenu.h
        gamemode.h
        gameoptionsevent.h
        gamesideservercontrol.h
        gamespyadmin.h
        gamespyauthmgr.h
        gamespycschallengeresponseevent.h
        gamespyscchallengeevent.h
        gdcnc.h
        gdsingleplayer.h
        gdskirmish.h
        god.h
        godmodeevent.h
        init.h
        inputconfig.h
        inputconfigmgr.h
        lanchat.h
        langmode.h
        lev_file.h
        level.h
        loadingevent.h
        mainloop.h
        mainmenutransition.h
        modpackage.h
        modpackagemgr.h
        moneyevent.h
        movie.h
        mpsettingsmgr.h
        multihud.h
        nat.h
        nataddr.h
        natsock.h
        natter.h
        netevent.h
        nethandler.h
        netinterface.h
        nettgas.h
        nicenum.h
        overlay.h
        player.h
        playerkill.h
        playermanager.h
        priority.h
        purchaserequestevent.h
        purchaseresponseevent.h
        radiocommanddisplay.h
        regbool.h
        regfloat.h
        regint.h
        regstring.h
        renegadecheatmgr.h
        renegadedialogmgr.h
        renegadeplayerterminal.h
        requestkillevent.h
        resource.h
        sbbomanager.h
        scoreevent.h
        scorescreen.h
        scpingresponseevent.h
        sctextobj.h
        serverfps.h
        shutdown.h
        singletoninstancekeeper.h
        skinpackage.h
        skinpackagemgr.h
        slavemaster.h
        suicideevent.h
        svrgoodbyeevent.h
        systemsettings.h
        team.h
        teammanager.h
        textdisplay.h
        useroptions.h
        vendor.h
        vipmodeevent.h
        warpevent.h
        winevent.h
        wolgmode.h
        wollocalemgr.h)

set (commando_sources
        AnnounceEvent.cpp
        AutoStart.cpp
        CDKeyAuth.cpp
        ConsoleMode.cpp
        DlgDownload.cpp
        DlgMPConnect.cpp
        DlgMPConnectionRefused.cpp
        DlgMPTeamSelect.cpp
        DlgMessageBox.cpp
        DlgPasswordPrompt.cpp
        DlgQuickmatch.cpp
        DlgRestart.cpp
        DlgWOLAutoStart.cpp
        DlgWOLLogon.cpp
        DlgWOLSettings.cpp
        DlgWOLWait.cpp
        DlgWebPage.cpp
        FirewallWait.cpp
        GameResSend.cpp
        GameSpyBanList.cpp
        GameSpy_QnR.cpp
        NAT.cpp
        ServerSettings.cpp
        WOLBuddyMgr.cpp
        WOLChatMgr.cpp
        WOLDiags.cpp
        WOLGameInfo.cpp
        WOLJoinGame.cpp
        WOLLoginProfile.cpp
        WOLLogonMgr.cpp
        WOLQuickMatch.cpp
        WebBrowser.cpp
        apppacketstats.cpp
        bandwidth.cpp
        bandwidthcheck.cpp
        bandwidthgraph.cpp
        bioevent.cpp
        buildnum.cpp
        campaign.cpp
        cdverify.cpp
        changeteamevent.cpp
        chatshre.cpp
        clientbboevent.cpp
        clientfps.cpp
        clientgoodbyeevent.cpp
        clienthintmanager.cpp
        clientpingmanager.cpp
        cnetwork.cpp
        combatgmode.cpp
        cominit.cpp
        commandosaveload.cpp
        comnetrcvinst.cpp
        console.cpp
        consolecommandevent.cpp
        consolefunction.cpp
        csconsolecommandevent.cpp
        cshint.cpp
        cspingrequestevent.cpp
        cstextobj.cpp
        datasafe.cpp
        devoptions.cpp
        diagnostics.cpp
        dialogtests.cpp
        dlgcharacteroptions.cpp
        dlgcheatoptions.cpp
        dlgcncbattleinfo.cpp
        dlgcncpurchasemainmenu.cpp
        dlgcncpurchasemenu.cpp
        dlgcncreference.cpp
        dlgcncserverinfo.cpp
        dlgcncteaminfo.cpp
        dlgcncwinscreen.cpp
        dlgconfigaudiotab.cpp
        dlgconfigperformancetab.cpp
        dlgconfigvideotab.cpp
        dlgcontrols.cpp
        dlgcontrolsaveload.cpp
        dlgcontrolslisttab.cpp
        dlgcontroltabs.cpp
        dlgcredits.cpp
        dlgevabuildingstab.cpp
        dlgevacharacterstab.cpp
        dlgevadatatab.cpp
        dlgevaencyclopedia.cpp
        dlgevamaptab.cpp
        dlgevaobjectivestab.cpp
        dlgevavehiclestab.cpp
        dlgevaviewertab.cpp
        dlgevaweaponstab.cpp
        dlghelpscreen.cpp
        dlginternetoptions.cpp
        dlgloadspgame.cpp
        dlgmainmenu.cpp
        dlgmovieoptions.cpp
        dlgmpchangelannickname.cpp
        dlgmpingamechat.cpp
        dlgmpingameteamchat.cpp
        dlgmplangamelist.cpp
        dlgmplanhostoptions.cpp
        dlgmpslaveservers.cpp
        dlgmpwoladdbuddy.cpp
        dlgmpwoladdignoreentry.cpp
        dlgmpwolautologinprompt.cpp
        dlgmpwolbuddies.cpp
        dlgmpwolbuddylistpopup.cpp
        dlgmpwolchat.cpp
        dlgmpwoldeletebuddy.cpp
        dlgmpwoldeleteignoreentry.cpp
        dlgmpwolgamelist.cpp
        dlgmpwolgoodies.cpp
        dlgmpwolhostchatlobby.cpp
        dlgmpwolignorelist.cpp
        dlgmpwolinvitation.cpp
        dlgmpwollocalenag.cpp
        dlgmpwolmain.cpp
        dlgmpwolmotd.cpp
        dlgmpwolpagebuddy.cpp
        dlgmpwolpagereply.cpp
        dlgmpwolquickmatch.cpp
        dlgmpwolquickmatchoptions.cpp
        dlgmultiplayoptions.cpp
        dlgpreviewoptions.cpp
        dlgsavegame.cpp
        dlgserversaveload.cpp
        dlgsidebarhelp.cpp
        dlgtechoptions.cpp
        donateevent.cpp
        evictionevent.cpp
        floodprotectionmgr.cpp
        gamechanlist.cpp
        gamechannel.cpp
        gamedata.cpp
        gamedataupdateevent.cpp
        gameinitmgr.cpp
        gamemenu.cpp
        gamemode.cpp
        gameoptionsevent.cpp
        gamesideservercontrol.cpp
        gamespyadmin.cpp
        gamespyauthmgr.cpp
        gamespycschallengeresponseevent.cpp
        gamespyscchallengeevent.cpp
        gdcnc.cpp
        gdsingleplayer.cpp
        gdskirmish.cpp
        god.cpp
        godmodeevent.cpp
        init.cpp
        inputconfig.cpp
        inputconfigmgr.cpp
        lanchat.cpp
        langmode.cpp
        level.cpp
        loadingevent.cpp
        mainloop.cpp
        mainmenutransition.cpp
        messages.cpp
        modpackage.cpp
        modpackagemgr.cpp
        moneyevent.cpp
        movie.cpp
        mpsettingsmgr.cpp
        multihud.cpp
        nataddr.cpp
        natsock.cpp
        natter.cpp
        netevent.cpp
        netgraphs.cpp
        nethandler.cpp
        netinterface.cpp
        nicenum.cpp
        overlay.cpp
        pkthandlers.cpp
        player.cpp
        playerkill.cpp
        playermanager.cpp
        priority.cpp
        purchaserequestevent.cpp
        purchaseresponseevent.cpp
        radiocommanddisplay.cpp
        regbool.cpp
        regfloat.cpp
        regint.cpp
        regstring.cpp
        renegadecheatmgr.cpp
        renegadedialogmgr.cpp
        renegadeplayerterminal.cpp
        requestkillevent.cpp
        sbbomanager.cpp
        scoreevent.cpp
        scorescreen.cpp
        scpingresponseevent.cpp
        sctextobj.cpp
        serverfps.cpp
        shutdown.cpp
        singletoninstancekeeper.cpp
        skinpackage.cpp
        skinpackagemgr.cpp
        slavemaster.cpp
        suicideevent.cpp
        svrgoodbyeevent.cpp
        systemsettings.cpp
        team.cpp
        teammanager.cpp
        textdisplay.cpp
        useroptions.cpp
        vendor.cpp
        vipmodeevent.cpp
        warpevent.cpp
        winevent.cpp
        wolgmode.cpp
        wollocalemgr.cpp)

add_library(commando STATIC ${commando_sources} ${commando_headers})
set_target_properties(commando PROPERTIES LINKER_LANGUAGE CXX)