set (scripts_headers
        Common.h
        CustomEvents.h
        DPrint.h
        Group.h
        GroupControl.h
        Mission00.h
        Mission1.h
        Mission10.h
        Mission11.h
        Mission12.h
        Mission2.h
        Mission3.h
        Mission4.h
        Mission5.h
        Mission6.h
        Mission7.h
        Mission8.h
        Mission9.h
        MissionX0.h
        PRDemo.h
        ScriptFactory.h
        ScriptNode.h
        ScriptPublisher.h
        ScriptRegistrant.h
        ScriptRegistrar.h
        Test_RAD.h
        Toolkit.h
        actionparams.h
        always.h
        borlandc.h
        combatsound.h
        gameobjobserver.h
        scriptcommands.h
        scriptevents.h
        scripts.h
        slist.h
        string_ids.h
        strtrim.h
        unitcombat.h
        vector.h
        vector3.h
        visualc.h
        watcom.h
        wwmath.h)

set (scripts_sources
        Common.cpp
        DLLmain.cpp
        DPrint.cpp
        DrMobius.cpp
        Group.cpp
        GroupControl.cpp
        GroupScript.cpp
        Mission00.cpp
        Mission01.cpp
        Mission02.cpp
        Mission03.cpp
        Mission04.cpp
        Mission05.cpp
        Mission06.cpp
        Mission07.cpp
        Mission09.cpp
        Mission10.cpp
        Mission11.cpp
        MissionDemo.cpp
        MissionS04.cpp
        MissionX0.cpp
        PRDemo.cpp
        ScriptFactory.cpp
        ScriptRegistrar.cpp
        Test_BMG.cpp
        Test_Cinematic.cpp
        Test_DAK.cpp
        Test_DAY.cpp
        Test_DEL.cpp
        Test_DLS.cpp
        Test_DLS_M03.cpp
        Test_DME.cpp
        Test_GTH.cpp
        Test_JDG_EVA.cpp
        Test_PDS.cpp
        Test_RAD.cpp
        Test_RMV.cpp
        Test_RMV_Toolkit.cpp
        Toolkit.cpp
        Toolkit_Actions.cpp
        Toolkit_Animations.cpp
        Toolkit_Broadcaster.cpp
        Toolkit_Explosions.cpp
        Toolkit_Objectives.cpp
        Toolkit_Objects.cpp
        Toolkit_Powerup.cpp
        Toolkit_Siege.cpp
        Toolkit_Sounds.cpp
        Toolkit_Spawners.cpp
        Toolkit_Triggers.cpp
        mission08.cpp
        scripts.cpp
        strtrim.cpp
        unitcombat.cpp)

add_library(scripts STATIC ${scripts_sources} ${scripts_headers})
set_target_properties(scripts PROPERTIES LINKER_LANGUAGE CXX)