set (wwui_headers
        IMECandidate.h
        IMECandidateCtrl.h
        IMEManager.h
        ProgressCtrl.h
        buttonctrl.h
        checkboxctrl.h
        childdialog.h
        comboboxctrl.h
        controladvisesink.h
        dialogbase.h
        dialogbutton.h
        dialogcontrol.h
        dialogfactory.h
        dialogmgr.h
        dialogparser.h
        dialogtext.h
        dialogtransition.h
        dropdownctrl.h
        editctrl.h
        healthbarctrl.h
        imagectrl.h
        inputctrl.h
        listctrl.h
        listiconmgr.h
        mapctrl.h
        menubackdrop.h
        menudialog.h
        menuentryctrl.h
        merchandisectrl.h
        mousemgr.h
        multilinetextctrl.h
        popupdialog.h
        screencursor.h
        scrollbarctrl.h
        shortcutbarctrl.h
        sliderctrl.h
        stylemgr.h
        tabctrl.h
        textmarqueectrl.h
        tooltip.h
        tooltipmgr.h
        treectrl.h
        viewerctrl.h
        wwuiinput.h)

set (wwui_sources
        IMECandidate.cpp
        IMECandidateCtrl.cpp
        IMEManager.cpp
        ProgressCtrl.cpp
        buttonctrl.cpp
        checkboxctrl.cpp
        childdialog.cpp
        comboboxctrl.cpp
        dialogbase.cpp
        dialogbutton.cpp
        dialogcontrol.cpp
        dialogmgr.cpp
        dialogparser.cpp
        dialogtext.cpp
        dialogtransition.cpp
        dropdownctrl.cpp
        editctrl.cpp
        healthbarctrl.cpp
        imagectrl.cpp
        inputctrl.cpp
        listctrl.cpp
        listiconmgr.cpp
        mapctrl.cpp
        menubackdrop.cpp
        menudialog.cpp
        menuentryctrl.cpp
        merchandisectrl.cpp
        mousemgr.cpp
        multilinetextctrl.cpp
        popupdialog.cpp
        screencursor.cpp
        scrollbarctrl.cpp
        shortcutbarctrl.cpp
        sliderctrl.cpp
        stylemgr.cpp
        tabctrl.cpp
        textmarqueectrl.cpp
        tooltip.cpp
        tooltipmgr.cpp
        treectrl.cpp
        viewerctrl.cpp
        wwuiinput.cpp)

add_library(wwui STATIC ${wwui_sources} ${wwui_headers})
set_target_properties(wwui PROPERTIES LINKER_LANGUAGE CXX)